# ai-development

backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/auth/: router.py  service.py
backend/app/core/: config.py  security.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: LoginPage.module.css  LoginPage.tsx  WelcomePage.module.css  WelcomePage.tsx
